[project]
name = "focus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker>=1.9.0",
    "pyright>=1.1.390",
    "sqlmodel>=0.0.22",
    "tcl>=0.2",
    "toga>=0.4.8",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "mypy>=1.13.0",
    "pytest-freezer>=0.4.8",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.2",
    "devtools>=0.12.2",
    "ipdb>=0.13.13",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "UP", "S", "B", "DTZ", "T20", "PT", "RSE", "SIM", "TID", "PTH", "TRY", "FURB", "RUF"]

[tool.ruff.lint.per-file-ignores]
"test_*" = ["S101"]
